fix filling alignment

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     background-color: rgba(255, 165, 0, 0.5);
     font-family: 'Open Sans', sans-serif;
     padding: 1mm; /* Set the padding of the body element to 1 millimeter */
+    position: absolute;
   }
 
   
@@ -29,7 +30,7 @@ h3 {
 body {
     background-color: #F0F8FF; /* Set background color to a light blue for smaller viewports */
     display: block;
-    position: static; /* The default position value */
+    position: relative; /* The default position value */
     max-width: 100%; /* Set the maximum width of the container to 100% of its parent element */
     min-width: 300px; /* Set the minimum width of the container to 300 pixels */
 }
